--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mocha": "^3.2.0",
     "pdf-to-text": "0.0.6",
     "rimraf": "^2.6.1",
+    "sync-request": "^4.1.0",
     "xml2js": "0.4.17"
   },
   "dependencies": {
